fixed library.bib to autogenerate primary.bib

--- a/index.Rmd
+++ b/index.Rmd
@@ -70,7 +70,7 @@ Finally, @HaneySIGMOD2017 and @Holan2010 are good examples of the sorts of imple
 # Statistical Disclosure Limitation
 Within most national statistical systems, the primary approach to protecting respondent privacy has been *statistical disclosure limitation* or SDL. @anderson:challenges:JOS:2007 describes the history of threats to confidentiality in the U.S. statistical system prior to 1965.  @Fellegi:1972 initiated the statistical analysis of data confidentiality. @Dalenius:Towards:1977 recognized that statistical agencies would need to do more than just protect against direct disclosures, and thus warned against what he called inferential disclosure. His idea was formalized by @Duncan:Lambert:1986, and provides the ultimate rationale for formal privacy in national statistics. 
  
-@abowdschmutteBPEA2015 review the SDL methods currently in use and discuss their application to economic data. They argue that the analysis of SDL-laden data is inherently compromised because the details of the SDL protections cannot be disclosed. If they cannot be disclosed, their consequences for inference are unknowable, and, as they show, potentially large. @Garfinkel:Deidentification:NIST:2015 discusses techniques for de-identifying data and the many ways in which modern computing tools and a data-rich environment may render effective de-identification impossible.
+@abowd:schmutte:BPEA:2015 review the SDL methods currently in use and discuss their application to economic data. They argue that the analysis of SDL-laden data is inherently compromised because the details of the SDL protections cannot be disclosed. If they cannot be disclosed, their consequences for inference are unknowable, and, as they show, potentially large. @Garfinkel:Deidentification:NIST:2015 discusses techniques for de-identifying data and the many ways in which modern computing tools and a data-rich environment may render effective de-identification impossible.
 Finally, @spwp22 provides the most comprehensive review of SDL methods currently in use across the U.S. statistical system. 
 
 # Economics of Privacy
