--- a/library.bib
+++ b/library.bib
@@ -99,7 +99,7 @@ eprint = {
   journal  = {Privacy Law Scholars Conference 2017},
   year     = {2018},
   doi      = {N/A},
-  keywords = {formal privacy, background},
+  keywords = {formal privacy, background, primary},
   url      = {https://openscholar.mit.edu/sites/default/files/dept/files/nissim_et_al_-_differential_privacy_primer_for_non-technical_audiences_1.pdf},
 }
 
@@ -173,7 +173,7 @@ eprint = {
   title        = {{Harvard Data Privacy Lab Homepage}},
   year         = {2018},
   note         = {Accessed: 2018-03-17},
-  keywords     = {background},
+  keywords     = {background, primary},
   url          = {https://dataprivacylab.org/},
 }
 
@@ -182,7 +182,7 @@ eprint = {
   title        = {{Homepage}},
   year         = {2019},
   note         = {Accessed: 2019-04-01},
-  keywords     = {background},
+  keywords     = {background, primary},
   url          = {https://privacytools.seas.harvard.edu/},
 }
 
@@ -630,7 +630,7 @@ eprint = {
   author   = {Frederica R. Conrey and Randal ZuWallack and Robynne Locke},
   title    = {Census Barriers, Attitudes, and Motivators Survey II Final Report},
   year     = {2012},
-  grp      = {ICF Macro},
+  institution      = {ICF Macro},
   keywords = {official statistics},
 }
 
@@ -774,7 +774,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   keywords  = {official statistics, primary},
   url       = {https://digitalcommons.ilr.cornell.edu/ldi/33/},
 }
-@article{Sims1985,
+@book{Sims1985,
   author       = {Panel on Statistics on Natural Gas},
   title        = {Natural Gas Needs in a Changing Regulatory Environment},
   institution  = {National Academy Press},
@@ -924,6 +924,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   type      = {[Computer file]},
   doi       = {10.3886/E100424V2},
   publisher = {Cornell Institute for Social and Economic Research and Survey Research Institute},
+  institution = {Cornell Institute for Social and Economic Research and Survey Research Institute},
   url       = {https://www.openicpsr.org/openicpsr/project/100424/version/V2/view},
 }
 
@@ -951,13 +952,14 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   url          = {http://www2.census.gov/programs-surveys/acs/data/pums/2014/5-Year/},
 }
 
-@Article{Ec2011,
+@TechReport{Ec2011,
   author    = {{European Commission}},
   title     = {{SPECIAL EUROBAROMETER 359 Attitudes on Data Protection and Electronic Identity in the European Union}},
   year      = {2011},
   pages     = {330},
   abstract  = {This report presents the results of the largest survey ever conducted regarding citizen's behaviours and attitudes concerning identity management, data protection and privacy.},
   keywords  = {value of privacy},
+  institution = {European Commission},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
   url       = {http://ec.europa.eu/public_opinion/index_en.htm},
@@ -1627,11 +1629,12 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   url       = {https://go.galegroup.com/ps/i.do?p=AONE&sw=w&u=googlescholar&v=2.1&it=r&id=GALE%7CA17573001&sid=googleScholar&asid=731f5373},
 }
 
-@Article{Commission2013,
+@TechReport{Commission2013,
   author    = {Commission, European},
   title     = {{Eurobarometer 80, Public opinion in the european union}},
   year      = {2013},
   number    = {November},
+  institution = {European Commission},
   abstract  = {Eurobarometer 80 Autumn 2013, Public Opinion in the European Union},
   keywords  = {value of privacy},
   owner     = {vilhuber},
@@ -1947,6 +1950,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   title         = {{Fairness Through Awareness}},
   year          = {2011},
   abstract      = {We study fairness in classification, where individuals are classified, e.g., admitted to a university, and the goal is to prevent discrimination against individuals based on their membership in some group, while maintaining utility for the classifier (the university). The main conceptual contribution of this paper is a framework for fair classification comprising (1) a (hypothetical) task-specific metric for determining the degree to which individuals are similar with respect to the classification task at hand; (2) an algorithm for maximizing utility subject to the fairness constraint, that similar individuals are treated similarly. We also present an adaptation of our approach to achieve the complementary goal of "fair affirmative action," which guarantees statistical parity (i.e., the demographics of the set of individuals receiving any classification are the same as the demographics of the underlying population), while treating similar individuals as similarly as possible. Finally, we discuss the relationship of fairness to privacy: when fairness implies privacy, and how tools developed in the context of differential privacy may be applied to fairness.},
+  journal = {arXiv},
   archiveprefix = {arXiv},
   arxivid       = {1104.3913},
   eprint        = {1104.3913},
@@ -2015,7 +2019,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   volume = {7},
   number = {3},
   pages = {17--51},
-  keywords  = {formal privacy, primary},
+  keywords  = {formal privacy},
   author = {Cynthia Dwork and Frank McSherry and Kobbi Nissim and Adam Smith},
   title = {Calibrating Noise to Sensitivity in Private Data Analysis},
   journal = {Journal of Privacy and Confidentiality}
@@ -2158,7 +2162,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   pages     = {211--407},
   issn      = {1551-305X},
   doi       = {10.1561/0400000042},
-  keywords  = {formal privacy, background},
+  keywords  = {formal privacy, background, primary},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
   url       = {http://www.nowpublishers.com/articles/foundations-and-trends-in-theoretical-computer-science/TCS-042},
@@ -2237,18 +2241,6 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   url      = {http://www.sciencedirect.com/science/article/pii/0167947392901364},
 }
 
-@Article{Epstein2012,
-  author    = {Epstein, David},
-  title     = {{A Solution Manual and Notes for : The Elements of Statistical Learning by Jerome Friedman , Trevor Hastie , and Robert Tibshirani}},
-  year      = {2012},
-  pages     = {1--83},
-  issn      = {0343-6993},
-  doi       = {10.1007/b94608},
-  isbn      = {0387848576},
-  owner     = {vilhuber},
-  pmid      = {15512507},
-  timestamp = {2016.08.30},
-}
 
 @Article{Epstein1980,
   author    = {Epstein, Richard A.},
@@ -2300,18 +2292,20 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   url      = {http://nsr.oxfordjournals.org/cgi/doi/10.1093/nsr/nwt032},
 }
 
-@Article{Fang2012,
-  author    = {Fang, Chengfang and Chang, Ee-Chien},
-  title     = {Adaptive differentially private histogram of low-dimensional data},
-  year      = {2012},
-  pages     = {160--179},
-  abstract  = {We want to publish low-dimensional points, for example 2D spatial points, in a differentially private manner. Most existing mechanisms publish noisy frequency counts of points in a fixed predefined partition. Arguably, histograms with adaptive partition, for example V-optimal and equi-depth histograms, which have smaller bin-widths in denser regions, would provide more statistical information. However, as the adaptive partitions leak significant information about the dataset, it is not clear how differentially private partitions can be published accurately. In this paper, we propose a simple method based on the observation that the sensitivity of publishing the sorted sequence of a dataset is independent of the size of dataset. Together with isotonic regression, the dataset can be reconstructed with high accuracy. One advantage of the proposed method is its simplicity, in the sense that there are only a few parameters to be determined. Furthermore, the parameters can be estimated solely from the privacy requirement $\epsilon$ and the total number of points, and hence do not leak information about the data. Although the parameters are chosen to minimize the earth mover's distance between the published data and original data, empirical studies show that the proposed method also achieves high accuracy w.r.t. to some other measurements, for example range query and order statistics.},
-  doi       = {10.1007/978-3-642-31680-7{\_}9},
-  isbn      = {978-3-642-31679-1},
-  keywords  = {formal privacy},
-  owner     = {vilhuber},
-  timestamp = {2016.08.30},
-  url       = {http://link.springer.com/chapter/10.1007/978-3-642-31680-7{\_}9},
+@InProceedings{Fang2012,
+author="Fang, Chengfang
+and Chang, Ee-Chien",
+editor="Fischer-H{\"u}bner, Simone
+and Wright, Matthew",
+title="Adaptive Differentially Private Histogram of Low-Dimensional Data",
+booktitle="Privacy Enhancing Technologies",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="160--179",
+keywords  = {formal privacy},
+abstract="We want to publish low-dimensional points, for example 2D spatial points, in a differentially private manner. Most existing mechanisms publish noisy frequency counts of points in a fixed predefined partition. Arguably, histograms with adaptive partition, for example V-optimal and equi-depth histograms, which have smaller bin-widths in denser regions, would provide more statistical information. However, as the adaptive partitions leak significant information about the dataset, it is not clear how differentially private partitions can be published accurately. In this paper, we propose a simple method based on the observation that the sensitivity of publishing the sorted sequence of a dataset is independent of the size of dataset. Together with isotonic regression, the dataset can be reconstructed with high accuracy. One advantage of the proposed method is its simplicity, in the sense that there are only a few parameters to be determined. Furthermore, the parameters can be estimated solely from the privacy requirement $\epsilon$ and the total number of points, and hence do not leak information about the data. Although the parameters are chosen to minimize the earth mover's distance between the published data and original data, empirical studies show that the proposed method also achieves high accuracy w.r.t. to some other measurements, for example range query and order statistics.",
+isbn="978-3-642-31680-7"
 }
 
 @Article{Fang2010,
@@ -2345,17 +2339,6 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   url       = {http://arxiv.org/abs/1503.01214},
 }
 
-@Article{FCSM2005,
-  author    = {FCSM},
-  title     = {{Report on Statistical Disclosure Limitation Methodology}},
-  year      = {2005},
-  volume    = {22},
-  number    = {12},
-  pages     = {137},
-  keywords  = {statistical disclosure limitation, SDL},
-  owner     = {vilhuber},
-  timestamp = {2016.08.30},
-}
 
 @TechReport{FCSM:2005,
   author      = {{Federal~Committee~on~Statistical~Methodology}},
@@ -2714,6 +2697,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   pages         = {1--27},
   abstract      = {In this paper we study the problem of approximately releasing the cut function of a graph while preserving differential privacy, and give new algorithms (and new analyses of existing algorithms) in both the interactive and non-interactive settings. Our algorithms in the interactive setting are achieved by revisiting the problem of releasing differentially private, approximate answers to a large number of queries on a database. We show that several algorithms for this problem fall into the same basic framework, and are based on the existence of objects which we call iterative database construction algorithms. We give a new generic framework in which new (efficient) IDC algorithms give rise to new (efficient) interactive private query release mechanisms. Our modular analysis simplifies and tightens the analysis of previous algorithms, leading to improved bounds. We then give a new IDC algorithm (and therefore a new private, interactive query release mechanism) based on the Frieze/Kannan low-rank matrix decomposition. This new release mechanism gives an improvement on prior work in a range of parameters where the size of the database is comparable to the size of the data universe (such as releasing all cut queries on dense graphs). We also give a non-interactive algorithm for efficiently releasing private synthetic data for graph cuts with error O(|V|{\^{}}{\{}1.5{\}}). Our algorithm is based on randomized response and a non-private implementation of the SDP-based, constant-factor approximation algorithm for cut-norm due to Alon and Naor. Finally, we give a reduction based on the IDC framework showing that an efficient, private algorithm for computing sufficiently accurate rank-1 matrix approximations would lead to an improved efficient algorithm for releasing private synthetic data for graph cuts. We leave finding such an algorithm as our main open problem.},
   archiveprefix = {arXiv},
+  journal = {arXiv},
   arxivid       = {1107.3731},
   eprint        = {1107.3731},
   owner         = {vilhuber},
@@ -3026,18 +3010,6 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   url           = {https://www.aeaweb.org/articles?id=10.1257/aer.104.5.431},
 }
 
-@Article{Khan2012,
-  author    = {Khan, Shakeeb and Nekipelov, Denis},
-  title     = {{Information Structure and Statistical Information in Discrete Response Models}},
-  year      = {2012},
-  number    = {1},
-  pages     = {3--75},
-  abstract  = {Strategic interaction parameters characterize the impact of actions of one economic agent on the payoff of another economic agent. In this paper we study how the in- formation available to economic agents regarding other economic agents can influence the ability of an econometrician to recover strategic information parameters from the observed actions. We consider two extreme cases: the complete information case where the information sets of participating economic agents coincide, and the incomplete in- formation case where each agent has a privately observable type. We find that in models with incomplete information the statistical (Fisher) information for the inter- action parameters is zero, implying that estimation and inference become nonstandard. In contrast, in the incomplete information models with any non-zero variance of player types, the statistical information is positive, implying the existence of regular estima- tors for these parameters converging at the parametric rate. This finding is illustrated in two cases: treatment effect models (expressed as a triangular system of equations), and the static game models. In both types of models the observed discrete outcomes are driven by continuously distributed errors with an unknown distribution (unob- served heterogeneity). We find that the key factor driving the result in these models is the relative tail behavior of the distribution of unobserved heterogeneity of economic agents' payoffs and the distribution of covariates. Our result has important impli- cations for experimental design in economic systems where unobserved heterogeneity plays a major role: a failure to provide sufficient independent randomization of the payoffs of participating agents may lead to non-robustness of estimated parameters to the distribution of unobserved heterogeneity.},
-  keywords  = {Endogenous discrete response,optimal convergence rate,static game,strategic interaction.},
-  owner     = {vilhuber},
-  timestamp = {2016.08.30},
-  url      = {http://emlab.berkeley.edu/{~}nekipelov/pdf{\_}papers/paper14.pdf},
-}
 
 @Article{Kifer2012,
   author    = {Kifer, Daniel and Machanavajjhala, Ashwin},
@@ -3416,31 +3388,6 @@ We provide a formal analysis of the error of query answers produced by the mecha
   timestamp = {2016.08.30},
 }
 
-@Article{Mori1981,
-  author    = {Mori, Toru},
-  title     = {{On the existence of satisfactory dynamic revelation processes for public good provision}},
-  year      = {1981},
-  volume    = {83},
-  number    = {3},
-  pages     = {429--443},
-  owner     = {vilhuber},
-  timestamp = {2016.08.30},
-}
-
-@Article{Newton2015,
-  author    = {Newton, Christopher J P},
-  title     = {{Preventing Unraveling in Social Networks - Anchored K-Core Problem}},
-  year      = {2015},
-  volume    = {37},
-  number    = {2},
-  pages     = {215--238},
-  doi       = {10.1137/14097032X},
-  isbn      = {1460000641},
-  keywords  = {1,10,1137,130923683,35k45,65m50,65m60,adaptive moving meshes,ams subject classifications,doi,introduction,liquid crystals are intermediate,nematic liquid crystals,occur,q -tensor model,states of matter which},
-  owner     = {vilhuber},
-  timestamp = {2016.08.30},
-  url       = {https://epubs.siam.org/doi/abs/10.1137/14097032X},
-}
 
 @InProceedings{Nissim:2012:PMD:2229012.2229073,
   author    = {Nissim, Kobbi and Orlandi, Claudio and Smorodinsky, Rann},
@@ -3681,10 +3628,20 @@ instead of a hierarchy.},
 @Article{Roth2012,
   author    = {Roth, Aaron},
   title     = {{Buying Private Data at Auction : The Sensitive Surveyor's Problem}},
-  year      = {2012},
-  volume    = {11},
-  number    = {1},
-  pages     = {3--8},
+  journal = {SIGecom Exch.},
+ issue_date = {June 2012},
+ volume = {11},
+ number = {1},
+ month = jun,
+ year = {2012},
+ issn = {1551-9031},
+ pages = {1--8},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2325713.2325714},
+ doi = {10.1145/2325713.2325714},
+ acmid = {2325714},
+ publisher = {ACM},
+ address = {New York, NY, USA},
   keywords  = {economics of privacy},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
@@ -3882,16 +3839,6 @@ instead of a hierarchy.},
   url       = {https://dl.acm.org/citation.cfm?doid=2810103.2813687},
 }
 
-@Article{Sieg2015,
-  author    = {Sieg, Holger and Smith, V Kerry and Banzhaf, H Spencer and Walsh, Randy},
-  title     = {{Economics Department of the University of Pennsylvania Institute of Social and Economic Research -- Osaka University CHANGES IN SPATIALLY DELINEATED PUBLIC GOODS *}},
-  year      = {2015},
-  doi       = {N/A},
-  owner     = {vilhuber},
-  timestamp = {2016.08.30},
-  url       = {N/A},
-}
-
 @Book{Smith:GSS:Codebook:2011,
   title     = {{G}eneral {S}ocial {S}urveys, 1972-2010: cumulative codebook},
   publisher = {Chicago: National Opinion Research Center},
@@ -3903,26 +3850,15 @@ instead of a hierarchy.},
   xurlx     = {http://books.google.com/books?id=KGtegVXqD8wC},
 }
 
-@Article{Society2014,
-  author    = {Society, The Econometric},
-  title     = {{Social Distance and Social Decisions Author ( s ): George A . Akerlof}},
-  year      = {2014},
-  volume    = {65},
-  number    = {5},
-  pages     = {1005--1027},
-  keywords  = {education,fertility,social class,social interaction,urban economics},
-  owner     = {vilhuber},
-  timestamp = {2016.08.30},
-}
-
-@Article{Stephens-davidowitz2015,
-  author    = {Stephens-davidowitz, Seth},
+@TechReport{Stephens-davidowitz2015,
+  author    = {Stephens-davidowitz, Seth and Hal Varian},
   title     = {{A Hands-on Guide to Google Data}},
   year      = {2015},
   pages     = {1--25},
   doi       = {N/A},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
+  institution = {Google, Inc.},
   url       = {http://people.ischool.berkeley.edu/~hal/Papers/2015/primer.pdf},
 }
 
@@ -4012,7 +3948,7 @@ instead of a hierarchy.},
   title        = {{C}onfidential {I}nformation {P}rotection and {S}tatistical {E}fficency {A}ct},
   year         = {2002},
   note         = {Pub. L. 107-347, title V, Dec. 17, 2002, 116 Stat. 2962 ( 44 U.S.C. 3501 note)},
-  keywords     = {policy, background},
+  keywords     = {policy, background, primary},
   lastaccessed = {February 11, 2013},
   owner        = {vilhuber},
   timestamp    = {2016.08.30},
@@ -4024,7 +3960,7 @@ instead of a hierarchy.},
   title        = {{C}onfidential {I}nformation {P}rotection and {S}tatistical {E}fficency {A}ct},
   year         = {2018},
   note         = {Pub. L. 115-435, title III, Jan 14 2019, 132 Stat. 5529},
-  keywords     = {policy, background},
+  keywords     = {policy, background, primary},
   lastaccessed = {April 1, 2019},
   url          = {https://www.congress.gov/bill/115th-congress/house-bill/4174},
   note = {part of the Foundations for Evidence-Based Policymaking Act of 2018}
@@ -4035,7 +3971,7 @@ instead of a hierarchy.},
   author       = {{13 U.S.~Code}},
   title        = {{USC}: Title 13 - {Census Act}},
   year         = {1954},
-  keywords     = {policy, background},
+  keywords     = {policy, background, primary},
   lastaccessed = {February 11, 2013},
   owner        = {vilhuber},
   timestamp    = {2016.08.30},
@@ -4145,7 +4081,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   institution = {UC Berkeley School of Information},
   pages     = {1--19},
   abstract  = {Much has been written about the difficulties that ``information'' poses for neoclassical economics. How ironic that ICE-information, communication, and entertainment-now comprises the largest sector in the American economy. If information poses problems for economic theory, so much the worse for economic theory: real markets seem to deal with information rather well. This paradox is the central theme of this essay: information, that slippery and strange economic good, is, in fact, handled very well by market institutions. The reason is that real markets are much more creative than those simple competitive markets studied in Econ 1. The fact that real-life markets can handle a good as problematic as is a testament to the flexibility and robustness of market institutions.},
-  keywords  = {value of data, primary},
+  keywords  = {value of data},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
   url       = {http://people.ischool.berkeley.edu/{~}hal/Papers/japan/index.html},
@@ -4185,6 +4121,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   abstract      = {We consider the problem of Bayesian learning on sensitive datasets and present two simple but somewhat surprising results that connect Bayesian learning to "differential privacy:, a cryptographic approach to protect individual-level privacy while permiting database-level utility. Specifically, we show that that under standard assumptions, getting one single sample from a posterior distribution is differentially private "for free". We will see that estimator is statistically consistent, near optimal and computationally tractable whenever the Bayesian model of interest is consistent, optimal and tractable. Similarly but separately, we show that a recent line of works that use stochastic gradient for Hybrid Monte Carlo (HMC) sampling also preserve differentially privacy with minor or no modifications of the algorithmic procedure at all, these observations lead to an "anytime" algorithm for Bayesian learning under privacy constraint. We demonstrate that it performs much better than the state-of-the-art differential private methods on synthetic and real datasets.},
   archiveprefix = {arXiv},
   arxivid       = {1502.07645},
+  journal = {arXiv},
   comment       = {See version 2 in library},
   doi           = {N/A},
   eprint        = {1502.07645},
@@ -4673,6 +4610,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   abstract    = {This document is a primer on differential privacy, which is a formal mathematical framework for guaranteeing privacy protection when analyzing or releasing statistical data. Recently emerging from the theoretical computer science literature, differential privacy is now in initial stages of implementation and use in various academic, industry, and government settings. Using intuitive illustrations and limited mathematical formalism, this document provides an introduction to differential privacy for non-technical practitioners, who are increasingly tasked with making decisions with respect to differential privacy as it grows more widespread in use. In particular, the examples in this document illustrate ways in which social scientists can conceptualize the guarantees provided by differential privacy with respect to the decisions they make when managing personal data about research subjects and informing them about the privacy protection they will be afforded.\&nbsp;\&nbsp;},
   address     = {Cambridge, MA},
   doi         = {N/A},
+  type = {primer},
   institution = {a product of the "Bridging Privacy Definitions" working group, part of the Privacy Tools for Sharing Research Data project at Harvard University},
   url         = {https://privacytools.seas.harvard.edu/files/privacytools/files/pedagogical-document-dp_new.pdf},
 }
@@ -4700,21 +4638,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   url     = { http://dx.doi.org/10.1177/1525822X15603149 },
 }
 
-@Article{Burkill:Web:PLOSONE:2016,
-  author    = {Burkill, Sarah and Copas, Andrew and Couper, Mick P. and Clifton, Soazig and Prah, Philip and Datta, Jessica and Conrad, Frederick and Wellings, Kaye and Johnson, Anne M. and Erens, Bob},
-  title     = {Using the Web to Collect Data on Sensitive Behaviours: A Study Looking at Mode Effects on the British National Survey of Sexual Attitudes and Lifestyles},
-  journal   = {PLOS ONE},
-  year      = {2016},
-  volume    = {11},
-  number    = {2},
-  pages     = {1-12},
-  month     = {02},
-  abstract  = {Background: Interviewer-administered surveys are an important method of collecting population-level epidemiological data, but suffer from declining response rates and increasing costs. Web surveys offer more rapid data collection and lower costs. There are concerns, however, about data quality from web surveys. Previous research has largely focused on selection biases, and few have explored measurement differences. This paper aims to assess the extent to which mode affects the responses given by the same respondents at two points in time, providing information on potential measurement error if web surveys are used in the future.   Methods: 527 participants from the third British National Survey of Sexual Attitudes and Lifestyles (Natsal-3), which uses computer assisted personal interview (CAPI) and self-interview (CASI) modes, subsequently responded to identically-worded questions in a web survey. McNemar tests assessed whether within-person differences in responses were at random or indicated a mode effect, i.e. higher reporting of more sensitive responses in one mode. An analysis of pooled responses by generalized estimating equations addressed the impact of gender and question type on change.   Results: Only 10 percent of responses changed between surveys. However mode effects were found for about a third of variables, with higher reporting of sensitive responses more commonly found on the web compared with Natsal-3.   Conclusions The web appears a promising mode for surveys of sensitive behaviours, most likely as part of a mixed-mode design. Our findings suggest that mode effects may vary by question type and content, and by the particular mix of modes used. Mixed-mode surveys need careful development to understand mode effects and how to account for them.},
-  doi       = {10.1371/journal.pone.0147983},
-  keywords  = {value of privacy},
-  publisher = {Public Library of Science},
-  url       = {https://doi.org/10.1371/journal.pone.0147983},
-}
+
 
 @InProceedings{Ligett:TakeIt:2012,
   author    = {Ligett, Katrina and Roth, Aaron},
@@ -5679,7 +5603,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   year         = {2017},
   note         = {public document in replication archive 10.5281/zenodo.1208758},
   doi          = {N/A},
-  keywords     = {background},
+  keywords     = {background, primary},
   url          = {N/A},
 }
 
@@ -5757,7 +5681,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   url      = {http://www.aeaweb.org/articles?id=10.1257/aer.102.3.349},
 }
 
-@Article{Campbell:Privacy:JEMS:,
+@Article{Campbell:Privacy:JEMS,
   author   = {Campbell, James and Goldfarb, Avi and Tucker, Catherine},
   title    = {Privacy Regulation and Market Structure},
   journal  = {Journal of Economics \& Management Strategy},
