--- a/primary-manual.bib
+++ b/primary-manual.bib
@@ -24,7 +24,7 @@
   url      = {https://digitalcommons.ilr.cornell.edu/ldi/32/},
 }
 
-@Article{abowdschmutteBPEA2015,
+@Article{abowd:schmutte:BPEA:2015,
   author    = {Abowd, John and Schmutte, Ian M.},
   title     = {Economic analysis and statistical disclosure limitation},
   journal   = {Brookings Papers on Economic Activity},
@@ -1037,14 +1037,6 @@
   url       = {http://people.ischool.berkeley.edu/{~}hal/Papers/japan/index.html},
 }
 
-@TechReport{PomattoTheCostOfInformation2018,
-  author      = {Luciano Pomatto and Philipp Strack and Omer Tamuz},
-  title       = {The Cost of Information},
-  institution = {arXiv},
-  year        = {2018},
-  file        = {:E\:\\Dropbox\\DataUnions\\literature\\Pomatto_CostofInformation_arXiv_2018.pdf:PDF},
-  keywords    = {value of data, primary},
-}
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
