fixed primary.bib for clean compile

--- a/primary.bib
+++ b/primary.bib
@@ -24,7 +24,7 @@
   url      = {https://digitalcommons.ilr.cornell.edu/ldi/32/},
 }
 
-@Article{abowdschmutteBPEA2015,
+@Article{abowd:schmutte:BPEA:2015,
   author    = {Abowd, John and Schmutte, Ian M.},
   title     = {Economic analysis and statistical disclosure limitation},
   journal   = {Brookings Papers on Economic Activity},
