--- a/index.Rmd
+++ b/index.Rmd
@@ -5,9 +5,12 @@ date: "`r format(Sys.time(), '%Y-%m-%d')`"
 site: bookdown::bookdown_site
 github-repo: labordynamicsinstitute/privacy-bibliography
 documentclass: article
-bibliography: [primary.bib]
+bibliography: [primary_dynamic.bib]
 link-citations: true
 ---
+```{r create bib,echo=FALSE}
+source("create_primary.R",echo=TRUE)
+```
 
 # Overview
 The purpose of this document is to provide scholars with a comprehensive list of readings relevant to the economic analysis of formal privacy, and particularly its application to public statistics. 
