fixed Varian references

--- a/library.bib
+++ b/library.bib
@@ -4026,32 +4026,22 @@ Book: The rapid growth of electronic commerce, along with changes in information
   timestamp = {2016.08.30},
 }
 
-@Article{Varian1996,
-  author    = {Varian, Hal},
-  title     = {{Economic aspects of personal privacy}},
-  journal   = {Topics in Regulatory Economics and Policy},
-  year      = {1996},
-  number    = {3},
-  pages     = {1--12},
-  abstract  = {The advent of low-cost technology for manipulating and communicating information has raised significant concerns about personal privacy. Privacy is a complex issue and can be treated from many perspectives; this whitepaper provides an overview of some of the economic issues surrounding privacy.2 In particular, I first describe the role of privacy in economic transactions and argue that consumers will rationally want certain kinds of information about themselves to be available to producers and want other kinds of information to be secret. I then go on to consider how one might define property rights in private information in ways that allow consumers to retain control over how information about them is used.},
-  doi       = {10.1007/978-1-4419-0038-8},
-  isbn      = {9781441900388},
-  keywords  = {economics of privacy, primary},
-  owner     = {vilhuber},
-  timestamp = {2016.08.30},
-  url       = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.39.1701{\&}amp;rep=rep1{\&}amp;type=pdf$\backslash$nhttp://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.39.1701{\&}rep=rep1{\&}type=pdf},
+@Inbook{Varian2002,
+author="Varian, Hal R.",
+editor="Lehr, William H.
+and Pupillo, Lorenzo M.",
+title="Economic Aspects of Personal Privacy",
+bookTitle="Cyber Policy and Economics in an Internet Age",
+year="2002",
+publisher="Springer US",
+address="Boston, MA",
+pages="127--137",
+abstract="The advent of low-cost technology for manipulating and communicating information has raised significant concerns about personal privacy. Privacy is a complex issue that can be treated from many perspectives; this paper provides an overview of some of the economic issues surrounding it.1",
+isbn="978-1-4757-3575-8",
+doi="10.1007/978-1-4757-3575-8_9",
+url="https://doi.org/10.1007/978-1-4757-3575-8_9"
 }
 
-@InCollection{varian2009economic,
-  author    = {Varian, Hal R.},
-  title     = {Economic aspects of personal privacy},
-  booktitle = {Internet policy and economics},
-  publisher = {Springer},
-  year      = {2009},
-  pages     = {101--109},
-  owner     = {vilhuber},
-  timestamp = {2016.08.30},
-}
 
 @Article{Varian2003,
   author    = {Varian, Hal R.},
@@ -4081,7 +4071,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   institution = {UC Berkeley School of Information},
   pages     = {1--19},
   abstract  = {Much has been written about the difficulties that ``information'' poses for neoclassical economics. How ironic that ICE-information, communication, and entertainment-now comprises the largest sector in the American economy. If information poses problems for economic theory, so much the worse for economic theory: real markets seem to deal with information rather well. This paradox is the central theme of this essay: information, that slippery and strange economic good, is, in fact, handled very well by market institutions. The reason is that real markets are much more creative than those simple competitive markets studied in Econ 1. The fact that real-life markets can handle a good as problematic as is a testament to the flexibility and robustness of market institutions.},
-  keywords  = {value of data},
+  keywords  = {value of data, primary},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
   url       = {http://people.ischool.berkeley.edu/{~}hal/Papers/japan/index.html},
@@ -4604,7 +4594,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
 }
 
 @Report{nissim:primer:2017,
-  author      = {Kobbi Nissim and Thomas Steinke and Alexandra Wood and Mark Bun and Marco Gaboardi and O{\textquoteright}Brien, David and Salil Vadhan},
+  author      = {Kobbi Nissim and Thomas Steinke and Alexandra Wood and Mark Bun and Marco Gaboardi and O'Brien, David and Salil Vadhan},
   title       = {Differential Privacy: A Primer for a Non-technical Audience (Updated Version)},
   year        = {2017},
   abstract    = {This document is a primer on differential privacy, which is a formal mathematical framework for guaranteeing privacy protection when analyzing or releasing statistical data. Recently emerging from the theoretical computer science literature, differential privacy is now in initial stages of implementation and use in various academic, industry, and government settings. Using intuitive illustrations and limited mathematical formalism, this document provides an introduction to differential privacy for non-technical practitioners, who are increasingly tasked with making decisions with respect to differential privacy as it grows more widespread in use. In particular, the examples in this document illustrate ways in which social scientists can conceptualize the guarantees provided by differential privacy with respect to the decisions they make when managing personal data about research subjects and informing them about the privacy protection they will be afforded.\&nbsp;\&nbsp;},
