--- a/library.bib
+++ b/library.bib
@@ -94,7 +94,7 @@ eprint = {
 }
 
 @Article{Nissim:DPNonTech:WP:2018,
-  author   = {Nissim, Kobbi and Steinke, Thomas and Wood, Alexandra and Altman, Micah and Bembenek, Aaron and Bun, Mark and Gaboardi, Marco and O{\textquoteright}Brien, David R. and Vadhan, Salil},
+  author   = {Nissim, Kobbi and Steinke, Thomas and Wood, Alexandra and Altman, Micah and Bembenek, Aaron and Bun, Mark and Gaboardi, Marco and O'Brien, David R. and Vadhan, Salil},
   title    = {Differential Privacy: A Primer for a Non-Technical Audience},
   journal  = {Privacy Law Scholars Conference 2017},
   year     = {2018},
