tinkering with BPEA citation

--- a/library.bib
+++ b/library.bib
@@ -1072,7 +1072,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   url         = {http://digitalcommons.ilr.cornell.edu/ldi/37/},
 }
 
-@Article{abowd:schmutte:BPEA:2015,
+@Article{abowdschmutteBPEA2015,
   author    = {John M. Abowd and Ian M. Schmutte},
   title     = {Economic analysis and statistical disclosure limitation},
   journal   = {Brookings Papers on Economic Activity},
