Re #19 adding keywords primary to Varian2002

--- a/library.bib
+++ b/library.bib
@@ -4028,14 +4028,14 @@ Book: The rapid growth of electronic commerce, along with changes in information
 
 @Inbook{Varian2002,
 author="Varian, Hal R.",
-editor="Lehr, William H.
-and Pupillo, Lorenzo M.",
+editor="Lehr, William H. and Pupillo, Lorenzo M.",
 title="Economic Aspects of Personal Privacy",
 bookTitle="Cyber Policy and Economics in an Internet Age",
 year="2002",
 publisher="Springer US",
 address="Boston, MA",
 pages="127--137",
+keywords = "primary",
 abstract="The advent of low-cost technology for manipulating and communicating information has raised significant concerns about personal privacy. Privacy is a complex issue that can be treated from many perspectives; this paper provides an overview of some of the economic issues surrounding it.1",
 isbn="978-1-4757-3575-8",
 doi="10.1007/978-1-4757-3575-8_9",
